--- a/notebooks/data_exploration.ipynb
+++ b/notebooks/data_exploration.ipynb
@@ -23,11 +23,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d2dc2236",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pandas in /Users/gopalmacbook/.pyenv/versions/3.11.6/lib/python3.11/site-packages (2.1.1)\n",
+      "Requirement already satisfied: numpy in /Users/gopalmacbook/.pyenv/versions/3.11.6/lib/python3.11/site-packages (1.25.2)\n",
+      "Requirement already satisfied: matplotlib in /Users/gopalmacbook/.pyenv/versions/3.11.6/lib/python3.11/site-packages (3.8.0)\n",
+      "Requirement already satisfied: seaborn in /Users/gopalmacbook/.pyenv/versions/3.11.6/lib/python3.11/site-packages (0.13.0)\n",
+      "\u001b[31mERROR: Could not find a version that satisfies the requirement PIL (from versions: none)\u001b[0m\u001b[31m\n",
+      "\u001b[0m\u001b[31mERROR: No matching distribution found for PIL\u001b[0m\u001b[31m\n",
+      "\u001b[0mNote: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install pandas numpy matplotlib seaborn PIL torch tqdm datetime re warnings"
+   ]
   },
   {
    "cell_type": "code",
@@ -464,12 +480,20 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.6"
   }
  },
