--- a/notebooks/model_training.ipynb
+++ b/notebooks/model_training.ipynb
@@ -18,8 +18,98 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pandas in /Users/gopalmacbook/.pyenv/versions/3.11.6/lib/python3.11/site-packages (2.1.1)\n",
+      "Requirement already satisfied: numpy in /Users/gopalmacbook/.pyenv/versions/3.11.6/lib/python3.11/site-packages (1.25.2)\n",
+      "Requirement already satisfied: matplotlib in /Users/gopalmacbook/.pyenv/versions/3.11.6/lib/python3.11/site-packages (3.8.0)\n",
+      "Requirement already satisfied: seaborn in /Users/gopalmacbook/.pyenv/versions/3.11.6/lib/python3.11/site-packages (0.13.0)\n",
+      "Requirement already satisfied: networkx in /Users/gopalmacbook/.pyenv/versions/3.11.6/lib/python3.11/site-packages (3.4.2)\n",
+      "Requirement already satisfied: scipy in /Users/gopalmacbook/.pyenv/versions/3.11.6/lib/python3.11/site-packages (1.15.1)\n",
+      "Requirement already satisfied: tqdm in /Users/gopalmacbook/.pyenv/versions/3.11.6/lib/python3.11/site-packages (4.67.1)\n",
+      "Requirement already satisfied: torch in /Users/gopalmacbook/.pyenv/versions/3.11.6/lib/python3.11/site-packages (2.1.0)\n",
+      "Requirement already satisfied: torchvision in /Users/gopalmacbook/.pyenv/versions/3.11.6/lib/python3.11/site-packages (0.16.0)\n",
+      "Requirement already satisfied: scikit-learn in /Users/gopalmacbook/.pyenv/versions/3.11.6/lib/python3.11/site-packages (1.6.1)\n",
+      "Requirement already satisfied: pillow in /Users/gopalmacbook/.pyenv/versions/3.11.6/lib/python3.11/site-packages (10.1.0)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in /Users/gopalmacbook/.pyenv/versions/3.11.6/lib/python3.11/site-packages (from pandas) (2.9.0.post0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /Users/gopalmacbook/.pyenv/versions/3.11.6/lib/python3.11/site-packages (from pandas) (2024.1)\n",
+      "Requirement already satisfied: tzdata>=2022.1 in /Users/gopalmacbook/.pyenv/versions/3.11.6/lib/python3.11/site-packages (from pandas) (2024.1)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in /Users/gopalmacbook/.pyenv/versions/3.11.6/lib/python3.11/site-packages (from matplotlib) (1.3.1)\n",
+      "Requirement already satisfied: cycler>=0.10 in /Users/gopalmacbook/.pyenv/versions/3.11.6/lib/python3.11/site-packages (from matplotlib) (0.12.1)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in /Users/gopalmacbook/.pyenv/versions/3.11.6/lib/python3.11/site-packages (from matplotlib) (4.56.0)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in /Users/gopalmacbook/.pyenv/versions/3.11.6/lib/python3.11/site-packages (from matplotlib) (1.4.8)\n",
+      "Requirement already satisfied: packaging>=20.0 in /Users/gopalmacbook/.pyenv/versions/3.11.6/lib/python3.11/site-packages (from matplotlib) (23.2)\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in /Users/gopalmacbook/.pyenv/versions/3.11.6/lib/python3.11/site-packages (from matplotlib) (3.2.0)\n",
+      "Requirement already satisfied: filelock in /Users/gopalmacbook/.pyenv/versions/3.11.6/lib/python3.11/site-packages (from torch) (3.15.1)\n",
+      "Requirement already satisfied: typing-extensions in /Users/gopalmacbook/.pyenv/versions/3.11.6/lib/python3.11/site-packages (from torch) (4.12.2)\n",
+      "Requirement already satisfied: sympy in /Users/gopalmacbook/.pyenv/versions/3.11.6/lib/python3.11/site-packages (from torch) (1.13.1)\n",
+      "Requirement already satisfied: jinja2 in /Users/gopalmacbook/.pyenv/versions/3.11.6/lib/python3.11/site-packages (from torch) (3.1.3)\n",
+      "Requirement already satisfied: fsspec in /Users/gopalmacbook/.pyenv/versions/3.11.6/lib/python3.11/site-packages (from torch) (2025.2.0)\n",
+      "Requirement already satisfied: requests in /Users/gopalmacbook/.pyenv/versions/3.11.6/lib/python3.11/site-packages (from torchvision) (2.31.0)\n",
+      "Requirement already satisfied: joblib>=1.2.0 in /Users/gopalmacbook/.pyenv/versions/3.11.6/lib/python3.11/site-packages (from scikit-learn) (1.4.2)\n",
+      "Requirement already satisfied: threadpoolctl>=3.1.0 in /Users/gopalmacbook/.pyenv/versions/3.11.6/lib/python3.11/site-packages (from scikit-learn) (3.5.0)\n",
+      "Requirement already satisfied: six>=1.5 in /Users/gopalmacbook/.pyenv/versions/3.11.6/lib/python3.11/site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in /Users/gopalmacbook/.pyenv/versions/3.11.6/lib/python3.11/site-packages (from jinja2->torch) (3.0.2)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in /Users/gopalmacbook/.pyenv/versions/3.11.6/lib/python3.11/site-packages (from requests->torchvision) (3.4.1)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /Users/gopalmacbook/.pyenv/versions/3.11.6/lib/python3.11/site-packages (from requests->torchvision) (3.10)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in /Users/gopalmacbook/.pyenv/versions/3.11.6/lib/python3.11/site-packages (from requests->torchvision) (2.3.0)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /Users/gopalmacbook/.pyenv/versions/3.11.6/lib/python3.11/site-packages (from requests->torchvision) (2025.1.31)\n",
+      "Requirement already satisfied: mpmath<1.4,>=1.1.0 in /Users/gopalmacbook/.pyenv/versions/3.11.6/lib/python3.11/site-packages (from sympy->torch) (1.3.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "\u001b[31mERROR: Could not find a version that satisfies the requirement caip (from versions: none)\u001b[0m\u001b[31m\n",
+      "\u001b[0m\u001b[31mERROR: No matching distribution found for caip\u001b[0m\u001b[31m\n",
+      "\u001b[0mNote: you may need to restart the kernel to use updated packages.\n",
+      "Collecting onnx\n",
+      "  Downloading onnx-1.17.0-cp311-cp311-macosx_12_0_universal2.whl.metadata (16 kB)\n",
+      "Requirement already satisfied: onnxruntime in /Users/gopalmacbook/.pyenv/versions/3.11.6/lib/python3.11/site-packages (1.21.0)\n",
+      "Requirement already satisfied: numpy>=1.20 in /Users/gopalmacbook/.pyenv/versions/3.11.6/lib/python3.11/site-packages (from onnx) (1.25.2)\n",
+      "Collecting protobuf>=3.20.2 (from onnx)\n",
+      "  Using cached protobuf-6.30.2-cp39-abi3-macosx_10_9_universal2.whl.metadata (593 bytes)\n",
+      "Requirement already satisfied: coloredlogs in /Users/gopalmacbook/.pyenv/versions/3.11.6/lib/python3.11/site-packages (from onnxruntime) (15.0.1)\n",
+      "Requirement already satisfied: flatbuffers in /Users/gopalmacbook/.pyenv/versions/3.11.6/lib/python3.11/site-packages (from onnxruntime) (25.1.24)\n",
+      "Requirement already satisfied: packaging in /Users/gopalmacbook/.pyenv/versions/3.11.6/lib/python3.11/site-packages (from onnxruntime) (23.2)\n",
+      "Requirement already satisfied: sympy in /Users/gopalmacbook/.pyenv/versions/3.11.6/lib/python3.11/site-packages (from onnxruntime) (1.13.1)\n",
+      "Requirement already satisfied: humanfriendly>=9.1 in /Users/gopalmacbook/.pyenv/versions/3.11.6/lib/python3.11/site-packages (from coloredlogs->onnxruntime) (10.0)\n",
+      "Requirement already satisfied: mpmath<1.4,>=1.1.0 in /Users/gopalmacbook/.pyenv/versions/3.11.6/lib/python3.11/site-packages (from sympy->onnxruntime) (1.3.0)\n",
+      "Downloading onnx-1.17.0-cp311-cp311-macosx_12_0_universal2.whl (16.6 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m16.6/16.6 MB\u001b[0m \u001b[31m15.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hDownloading protobuf-6.30.2-cp39-abi3-macosx_10_9_universal2.whl (417 kB)\n",
+      "Installing collected packages: protobuf, onnx\n",
+      "  Attempting uninstall: protobuf\n",
+      "    Found existing installation: protobuf 3.20.0\n",
+      "    Uninstalling protobuf-3.20.0:\n",
+      "      Successfully uninstalled protobuf-3.20.0\n",
+      "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
+      "tensorflow 2.18.0 requires numpy<2.1.0,>=1.26.0, but you have numpy 1.25.2 which is incompatible.\n",
+      "tensorflow 2.18.0 requires protobuf!=4.21.0,!=4.21.1,!=4.21.2,!=4.21.3,!=4.21.4,!=4.21.5,<6.0.0dev,>=3.20.3, but you have protobuf 6.30.2 which is incompatible.\n",
+      "streamlit 1.29.0 requires protobuf<5,>=3.20, but you have protobuf 6.30.2 which is incompatible.\n",
+      "google-ai-generativelanguage 0.6.15 requires protobuf!=4.21.0,!=4.21.1,!=4.21.2,!=4.21.3,!=4.21.4,!=4.21.5,<6.0.0dev,>=3.20.2, but you have protobuf 6.30.2 which is incompatible.\n",
+      "grpcio-status 1.70.0 requires protobuf<6.0dev,>=5.26.1, but you have protobuf 6.30.2 which is incompatible.\n",
+      "googleapis-common-protos 1.56.4 requires protobuf<5.0.0dev,>=3.15.0, but you have protobuf 6.30.2 which is incompatible.\n",
+      "google-api-core 2.23.0 requires protobuf!=3.20.0,!=3.20.1,!=4.21.0,!=4.21.1,!=4.21.2,!=4.21.3,!=4.21.4,!=4.21.5,<6.0.0.dev0,>=3.19.5, but you have protobuf 6.30.2 which is incompatible.\n",
+      "proto-plus 1.25.0 requires protobuf<6.0.0dev,>=3.19.0, but you have protobuf 6.30.2 which is incompatible.\n",
+      "opentelemetry-proto 1.27.0 requires protobuf<5.0,>=3.19, but you have protobuf 6.30.2 which is incompatible.\u001b[0m\u001b[31m\n",
+      "\u001b[0mSuccessfully installed onnx-1.17.0 protobuf-6.30.2\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install pandas numpy matplotlib seaborn networkx scipy tqdm torch torchvision scikit-learn pillow\n",
+    "%pip install caip \n",
+    "%pip install onnx onnxruntime"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Import required libraries\n",
     "import pandas as pd\n",
@@ -69,6 +159,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Configure paths\n",
     "DATA_DIR = \"./data\"\n",
@@ -107,6 +198,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "class AudienceDataset(Dataset):\n",
     "    \"\"\"Dataset for audience engagement prediction.\"\"\"\n",
@@ -173,6 +265,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Initialize feature extractors for images and text\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
@@ -189,6 +282,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Define transformations\n",
     "def encode_image(image):\n",
@@ -211,6 +305,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Create dataset\n",
     "dataset = AudienceDataset(\n",
@@ -235,6 +330,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Create data loaders\n",
     "batch_size = 16\n",
@@ -266,6 +362,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Get feature dimensions\n",
     "visual_dim = clip_model.model.config.projection_dim  # Usually 768 for CLIP-ViT-B/32\n",
@@ -305,6 +402,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Define optimizer and loss function\n",
     "optimizer = optim.Adam(fusion_model.parameters(), lr=0.0001)\n",
@@ -320,6 +418,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "def train_epoch(model, dataloader, optimizer, criterion, device):\n",
     "    \"\"\"Train model for one epoch.\"\"\"\n",
@@ -404,6 +503,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Training hyperparameters\n",
     "num_epochs = 30\n",
@@ -458,6 +558,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Plot training and validation loss\n",
     "plt.figure(figsize=(12, 6))\n",
@@ -512,6 +613,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Load the best model\n",
     "best_model = MultimodalFusionModel.load(f\"{MODEL_DIR}/fusion_model_best.pt\", device=device)\n",
@@ -529,6 +631,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Visualize predictions vs targets\n",
     "plt.figure(figsize=(10, 8))\n",
@@ -560,6 +663,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Initialize quantizer\n",
     "quantizer = ModelQuantizer(best_model)\n",
@@ -577,6 +681,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Benchmark original vs quantized model\n",
     "# Create sample inputs for benchmarking\n",
@@ -604,6 +709,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Export to ONNX format\n",
     "# Initialize ONNX exporter\n",
@@ -636,6 +742,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Save model configuration\n",
     "model_config = {\n",
@@ -702,7 +809,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
